--- a/src/components/Game/Game.scss
+++ b/src/components/Game/Game.scss
@@ -1,3 +1,12 @@
 .Game {
+  display: flex;
+  justify-content: center;
 
+  &__info {
+    margin-top: 20px;
+    font-weight: 400;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
 }
