--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -1,3 +1,14 @@
 .Layout {
+  height: 100%;
 
+  &__sidebar {
+    position: fixed;
+    left: 0;
+    top: 0;
+    bottom: 0;
+  }
+
+  &__main {
+    padding-left: 50px;
+  }
 }
