--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -2,11 +2,12 @@
 
 .Sidebar {
   height: 100%;
-  //width: $sidebar-width;
+  width: $sidebar-width;
   background-color: rgba(#2f2f2f, 50%);
   display: flex;
   padding: 10px;
   flex-direction: column;
+  overflow: auto;
 
   &__navigation {
     flex: 1;
@@ -14,5 +15,16 @@
 
   a {
     color: #ffffff;
+  }
+}
+
+.icon-link {
+  display: block;
+  max-width: 40px;
+
+  img {
+    display: block;
+    width: 100%;
+    height: auto;
   }
 }
