--- a/src/pages/StartPage/StartPage.scss
+++ b/src/pages/StartPage/StartPage.scss
@@ -12,23 +12,20 @@
 }
 
 .StartPage__navigation-item {
-  margin-bottom: 10px;
-  border: 1px solid #fed940;
+  &:not(:last-child) {
+    margin-bottom: 24px;
+  }
 
-  &:hover {
-    a {
-      color: #fed940;
+  .Button {
+    max-width: 220px;
+    width: 100%;
+    height: 50px;
+
+    &--primary {
+      max-width: 260px;
+      height: 60px;
     }
   }
-}
-
-.StartPage__navigation-item a {
-  transition: 0.3s linear all;
-  height: 100%;
-  display: block;
-  padding: 20px;
-  color: #ffffff;
-  text-decoration: none;
 }
 
 .instruction-modal {
