--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -13,6 +13,12 @@
     flex: 1;
   }
 
+  &__actions {
+    .icon-button:not(:last-child) {
+      margin-bottom: 16px;
+    }
+  }
+
   &__nav-list {
     li {
       &:not(:last-child) {
