--- a/src/components/ui/Avatar/Avatar.scss
+++ b/src/components/ui/Avatar/Avatar.scss
@@ -1,7 +1,7 @@
 .Avatar {
   display: inline-flex;
   border-radius: 50%;
-  background-color: #ababab;
+  background-color: #535353;
   background-position: center;
   background-size: cover;
 }
