added fullscreen api

--- a/src/components/Game/Game.scss
+++ b/src/components/Game/Game.scss
@@ -1,6 +1,8 @@
 .Game {
   display: flex;
   justify-content: center;
+  align-items: center;
+  height: 100%;
 
   &__info {
     margin-top: 20px;
