--- a/src/pages/GamePage/GamePage.scss
+++ b/src/pages/GamePage/GamePage.scss
@@ -1,24 +1,11 @@
 @import '../../styles/variables';
 
 .GamePage {
-  button {
-    font-family: 'Ubuntu', sans-serif;
-    width: 200px;
-    height: 40px;
-    text-transform: uppercase;
-    font-weight: 500;
-    font-size: 16px;
-    background: $white;
-    color: $grey-dark;
-    border-radius: 15px;
-    cursor: pointer;
-    transition: transform $short-effect;
-    outline: none;
-    will-change: transform;
-    border: none;
+  background: #171717;
 
-    &:hover {
-      transform: scale(0.99) translateY(2px);
-    }
+  .FullscreenButton {
+    position: absolute;
+    right: 24px;
+    top: 24px;
   }
 }
