--- a/src/index.scss
+++ b/src/index.scss
@@ -108,9 +108,9 @@ button {
   -moz-appearance: none;
 }
 
-.profile-form {
+.form {
   .Input {
-    margin-bottom: 24px;
+    margin-bottom: 20px;
 
     &__control {
       width: 100%;
