added media api

--- a/src/pages/GamePage/GamePage.scss
+++ b/src/pages/GamePage/GamePage.scss
@@ -3,7 +3,7 @@
 .GamePage {
   background: #171717;
 
-  .FullscreenButton {
+  &__tools {
     position: absolute;
     right: 24px;
     top: 24px;
