--- a/src/pages/LeaderboardPage/components/LeaderboardItem/LeaderboardItem.scss
+++ b/src/pages/LeaderboardPage/components/LeaderboardItem/LeaderboardItem.scss
@@ -31,7 +31,7 @@
     display: block;
     height: 8px;
     border-radius: 2px;
-    background-color: $yellow;
+    background-color: var(--color-primary);
     margin-top: 6px;
   }
 }
