--- a/src/pages/TopicPage/views/Comment.scss
+++ b/src/pages/TopicPage/views/Comment.scss
@@ -16,8 +16,8 @@
     width: 70px;
     height: 70px;
     border-radius: 50%;
-    background-color: $yellow;
-    border: 3px solid $yellow;
+    background-color: var(--color-primary);
+    border: 3px solid var(--color-primary);
     background-size: cover;
     background-position: center;
   }
