added swagger api

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,6 +2,7 @@
 $blue: #163bf3;
 $black: #000000;
 $grey-dark: #171717;
+$yellow: #fed940;
 $white: #ffffff;
 $grey-light: #ababab;
 $aqua: #0097ff;
