--- a/src/index.scss
+++ b/src/index.scss
@@ -22,8 +22,9 @@ body {
   font-family: 'Ubuntu', sans-serif;
   font-weight: 500;
   font-size: 18px;
-  color: $white;
-  background: $grey-dark;
+  color: var(--color-text);
+  background: var(--color-background);
+  transition: 0.15s background-color;
 }
 
 * {
