--- a/src/pages/StartPage/StartPage.scss
+++ b/src/pages/StartPage/StartPage.scss
@@ -1,3 +1,12 @@
+@media screen and (max-width: 1000px) {
+  .StartPage {
+    height: calc(100% - 90px);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
+
 .StartPage__navigation {
   display: flex;
   align-items: center;
